Kubedemo/Traefik-demo/service-traefik.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "Traefik"
    dns: route53
  annotations:
    domainName: "traefik.capgemini-demo.com"
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: lbendpoint
    port: 80
    targetPort: 80
  - name: traefik-ui
    port: 8080
    targetPort: 8080
  type: LoadBalancer
