Kubedemo/Traefik-demo/ingress-traefik.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik.capgemini-demo.com
    http:
      paths:
      - backend:
          serviceName: traefik-web-ui
          servicePort: 80
