Kubedemo/Traefik-demo/ingress3.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wensleydale
spec:
  rules:
  - host: wensleydale.capgemini-demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wensleydale
          servicePort: http
